--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ body .content .list {
   grid-gap: 5px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-auto-rows: 100px;
-  padding: 10px;
+  padding: 50px 20px;
   list-style-type: none;
 }
 body .content .list .item {
