--- a/css/styles.scss
+++ b/css/styles.scss
@@ -49,7 +49,7 @@ body {
       grid-gap: 5px;
       grid-template-columns: repeat(auto-fill, minmax($item-width, 1fr));
       grid-auto-rows: $item-height;
-      padding: 10px;
+      padding: 50px 20px;
       list-style-type: none;
 
       .item {
